avcodec_decode_video2 crashes. Start again from bare ffmpeg example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ endif (APPLE)
 
 # Packages
 
-find_package(OpenCV REQUIRED core)
+find_package(OpenCV REQUIRED core highgui)
 find_package(FFmpeg REQUIRED)
 
 # Options
