Super slow download and playback of videos where the server supports HTTP-Range (e.g. Youtube). Super slow and ugly. To be rewritten.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,3 +23,19 @@ target_link_libraries(
 	file_source
 	SimpleVideoInput
 )
+
+find_package(curl)
+if (CURL_FOUND)
+	include_directories(CURL_INCLUDE_DIRS)
+
+	add_executable(
+		web_source
+		web_source.cpp
+	)
+
+	target_link_libraries(
+		web_source
+		SimpleVideoInput
+		${CURL_LIBRARIES}
+	)
+endif (CURL_FOUND)
